--- a/Node.js/Day-04/url-shortner-app/src/views/analytics.ejs
+++ b/Node.js/Day-04/url-shortner-app/src/views/analytics.ejs
@@ -15,20 +15,24 @@
             align-items: center;
             border-radius: 10px;
         }
+        a {
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
     <div>
+        
         <% if(!locals.totalClicks){ %>
             <div style="display: flex; justify-content: space-between;">
                 <h1>Total Clicks : 0 </h1>
-                <a href="/url">Back</a>
+                <a class="back-history">Back</a>
             </div>
         <% } %>
         <% if(locals.totalClicks){ %>
             <div style="display: flex; justify-content: space-between;">
                 <h1>Total Clicks : <%= totalClicks %> </h1>
-                <a href="/url">Back</a>
+                <a class="back-history">Back</a>
             </div>
         <% } %>
         <% if(locals.visitHistory){ %>
@@ -41,4 +45,10 @@
         <% } %>
     </div>
 </body>
+<script>
+    const backButton = document.querySelector('.back-history')
+    backButton.addEventListener('click', (e) => {
+        window.history.back()
+    })
+</script>
 </html>
