--- a/Node.js/Day-04/url-shortner-app/src/views/home.ejs
+++ b/Node.js/Day-04/url-shortner-app/src/views/home.ejs
@@ -4,8 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home page</title>
+    <style>
+        .container{
+            width: 50%;
+            background-color: aquamarine;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            gap: 1rem;
+            padding: 1rem 0rem;
+            margin: auto;
+            border-radius: 1rem;
+        }
+        thead{
+            background-color: brown;
+            color: white;
+        }
+        th, td{
+            padding: 5px 20px;
+        }
+        .visit-link{
+            text-decoration: none;
+            color: red;
+        }
+        .visit-link:active{
+            color: brown;
+        }
+        .visit-link:visited{
+            color: blueviolet;
+        }
+    </style>
 </head>
 <body>
-    <a href="/url" target="_self">Click here to generate shorURL for your website</a>
+    <div class="container">
+        <a href="/url" target="_self">Click here to generate shorURL for your website</a>
+    <div>
+        <% if(locals.urls){ %>
+            <table border="2">
+                <thead>
+                    <th>S.N</th>
+                    <th>Short-ID</th>
+                    <th>Redirect</th>
+                    <th>Click</th>
+                    <th>Visit</th>
+                </thead>
+                <tbody>
+                    <% urls.forEach((url, index) => { %>
+                        <tr>
+                            <td><%= (index + 1) %></td>
+                            <td><%= url.shortID %></td>
+                            <td><%= url.redirectURL %></td>
+                            <td><%= url.visitHistory.length %></td>
+                            <td><a class="visit-link" href="http://localhost:4001/url/<%= url.shortID %>" target="_blank">Go</a></td>
+                        </tr>
+                    <% }) %>
+                </tbody>
+            </table>
+            
+        <% } %>
+    </div>
+    </div>
 </body>
 </html>
