Adding authentication into the url-shortner application

--- a/Node.js/Day-05(Authentication of URLShortner-app)/src/views/userRegistration.ejs
+++ b/Node.js/Day-05(Authentication of URLShortner-app)/src/views/userRegistration.ejs
@@ -38,6 +38,9 @@
             background-color: aquamarine;
             color: black;
         }
+        b{
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -67,6 +70,8 @@
             <div class="submit-btn-container">
                 <button type="submit">Create Account</button>
             </div>
+
+            <a href="/login">Already have an account, login</a>
         </div>
     </form>
 </body>
