short-url project stopped here

--- a/Node.js/Day-05(Authentication of URLShortner-app)/src/views/home.ejs
+++ b/Node.js/Day-05(Authentication of URLShortner-app)/src/views/home.ejs
@@ -56,7 +56,7 @@
                             <td><%= url.shortID %></td>
                             <td><%= url.redirectURL %></td>
                             <td><%= url.visitHistory.length %></td>
-                            <td><a class="visit-link" href="http://localhost:4002/url/<%= url.shortID %>" target="_blank">Go</a></td>
+                            <td><a class="visit-link" href="http://localhost:4002/url/<%= url.shortID %>" target="_self">Go</a></td>
                         </tr>
                     <% }) %>
                 </tbody>
