Adding logout fearture in the application

--- a/Node.js/Day-06(JWT Authentication)/src/views/generateShortID.ejs
+++ b/Node.js/Day-06(JWT Authentication)/src/views/generateShortID.ejs
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Generate Short ID</title>
     <style>
+         body {
+        background-color: rgb(192, 248, 229);
+      }
         .container {
             width: 50%;
             margin: auto;
-            background-color: aquamarine;
             display: flex;
             flex-direction: column;
             justify-content: center;
