--- a/Node.js/Day-06(JWT Authentication)/src/views/home.ejs
+++ b/Node.js/Day-06(JWT Authentication)/src/views/home.ejs
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home page</title>
     <style>
+      body {
+        background-color: rgb(192, 248, 229);
+      }
       .container {
         width: 50%;
-        background-color: aquamarine;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -16,6 +18,7 @@
         padding: 1rem 0rem;
         margin: auto;
         border-radius: 1rem;
+        text-align: center;
       }
       thead {
         background-color: brown;
@@ -59,6 +62,7 @@
             <th>Redirect</th>
             <th>Click</th>
             <th>Visit</th>
+            <th>Analytics</th>
           </thead>
           <tbody>
             <% urls.forEach((url, index) => { %>
@@ -75,6 +79,14 @@
                   >Go</a
                 >
               </td>
+              <td>
+                <a
+                  class="visit-link"
+                  href="http://localhost:4003/url/analytics/<%= url.shortID %>"
+                  target="_self"
+                  >Watch</a
+                >
+              </td>
             </tr>
             <% }) %>
           </tbody>
@@ -86,6 +98,25 @@
   </body>
   <script>
     const logoutBtn = document.getElementById("logout");
-    console.log(logoutBtn);
+    logoutBtn.addEventListener("click", () => {
+      //How to create a list of cookies
+      // function createCookieList() {
+      //   const cookieStr = document.cookie;
+
+      //   const cookieArr = cookieStr.split();
+
+      //   const cookies = cookieArr.reduce((cookies, cookie) => {
+      //     const [name, value] = cookie.split("=").map((x) => x.trim());
+      //     cookies[name] = value;
+      //     return cookies;
+      //   }, {});
+      // }
+
+      // document.cookie = `${cookies.loginToken}`;
+      // document.cookie = `loginToken=; expires=Thu, 01 Jan 1970 00:00:00 UTC`;
+      document.cookie = `loginToken=; expires=${Date.now()}`;
+      window.alert("Cookie has been deleted");
+      location.reload();
+    });
   </script>
 </html>
