--- a/Node.js/Day-06(JWT Authentication)/src/views/success.ejs
+++ b/Node.js/Day-06(JWT Authentication)/src/views/success.ejs
@@ -1,10 +1,22 @@
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Success</title>
-    </head>
-    <body>
-        <h1>Form submitted successfully</h1>
-        <a href="/url">Go back to the form</a>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Success</title>
+    <style>
+      body {
+        background-color: rgb(177, 255, 229);
+        width: 100%;
+        height: 20%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        gap: 2rem;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Form submitted successfully</h1>
+    <a href="/url">Go back to the form</a>
+  </body>
 </html>
