--- a/Node.js/Day-08(Blog Application)/src/views/home.ejs
+++ b/Node.js/Day-08(Blog Application)/src/views/home.ejs
@@ -6,6 +6,7 @@
   </head>
   <body>
     <div class="bg-warning"><%- include('./partials/nav') %></div>
+    <h1 class="text-center mt-4">Welcome to Home page</h1>
   </body>
   <%- include('./partials/script') %>
 </html>
