--- a/Node.js/Day-08(Blog Application)/src/views/signin.ejs
+++ b/Node.js/Day-08(Blog Application)/src/views/signin.ejs
@@ -3,12 +3,21 @@
   <head>
     <%- include('./partials/head') %>
     <title>Document</title>
+    <style>
+      .missing {
+        color: red;
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
     <%- include('./partials/nav') %>
 
     <div class="container mt-4">
       <form action="/user/signin" method="post">
+        <% if (locals.status === 'missing') { %>
+        <p class="missing"><%= locals.msg %></p>
+        <% } %>
         <div class="mb-3">
           <label for="email" class="form-label">Email address</label>
           <input
