--- a/Node.js/Day-09(Authentication & Blog setup)/src/views/partials/nav.ejs
+++ b/Node.js/Day-09(Authentication & Blog setup)/src/views/partials/nav.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Blog</a>
+    <a class="navbar-brand" href="/">Blog</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -15,8 +15,10 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
+
+        <% if (locals.user) { %>
         <li class="nav-item">
           <a class="nav-link" href="#">Add Blog</a>
         </li>
@@ -28,12 +30,24 @@
             data-bs-toggle="dropdown"
             aria-expanded="false"
           >
-            Laxman Krishnamurti
+            <%= locals.user.fullName %>
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Logout</a></li>
+            <li><a class="dropdown-item" href="/user/logout">Logout</a></li>
           </ul>
         </li>
+        <% } else { %>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/user/signin"
+            >Signin</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/user/signup"
+            >Signup</a
+          >
+        </li>
+        <%}%>
       </ul>
     </div>
   </div>
