--- a/Node.js/Day-09(Authentication & Blog setup)/src/views/signin.ejs
+++ b/Node.js/Day-09(Authentication & Blog setup)/src/views/signin.ejs
@@ -8,6 +8,9 @@
         color: red;
         text-align: center;
       }
+      .default-logo {
+        max-width: 40px;
+      }
     </style>
   </head>
   <body>
