--- a/Node.js/Day-09(Authentication & Blog setup)/src/views/partials/head.ejs
+++ b/Node.js/Day-09(Authentication & Blog setup)/src/views/partials/head.ejs
@@ -6,3 +6,8 @@
 />
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<style>
+  .login-user-profile {
+    max-width: 40px;
+  }
+</style>
