--- a/Node.js/Day-09(Authentication & Blog setup)/src/views/partials/nav.ejs
+++ b/Node.js/Day-09(Authentication & Blog setup)/src/views/partials/nav.ejs
@@ -1,6 +1,16 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Blog</a>
+    <a class="navbar-brand" href="/">
+      <% if (locals.user) { %>
+      <img
+        class="login-user-profile"
+        src="<%= user.profileImageUrl %>"
+        alt="profileImage"
+      />
+      <% } else { %>
+      <img class="default-logo" src="/uploads/default.png" alt="user-logo" />
+      <%}%>
+    </a>
     <button
       class="navbar-toggler"
       type="button"
