Making changes in the file

--- a/Node.js/Day-09(Authentication & Blog setup)/src/views/readBlog.ejs
+++ b/Node.js/Day-09(Authentication & Blog setup)/src/views/readBlog.ejs
@@ -36,7 +36,7 @@
         <h3><%= blog.title %></h3>
       </div>
       <div>
-        <p><%= blog.body %></p>
+        <pre><%= blog.body %></pre>
       </div>
     </div>
     <% } %>
